--- a/can4eve/pom.xml
+++ b/can4eve/pom.xml
@@ -6,11 +6,10 @@
 		<version>0.0.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.bitplan.can4eve</groupId>
 	<artifactId>com.bitplan.can4eve.can4eve</artifactId>
-	<version>0.0.1</version>
 	<packaging>jar</packaging>
-	<name>Can4Eve Swing application</name>
+	<name>com.bitplan.can4eve</name>
+	<description>Can4Eve Swing application</description>
 	<dependencies>
 		<dependency>
 			<groupId>com.bitplan.can4eve</groupId>
