--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>args4j</artifactId>
 			<version>${args4j.version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 	<modules>
 		<module>elm327</module>
