--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ language: android
 jdk: oraclejdk8
 # switch off gpg handling
 install: mvn install -DskipTests=true -Dgpg.skip=true
+# Android tools
+componnents:
+    - tools
+    - build-tools-24.0.3
+    - android-25
