improves travis testing by starting xvfb to avoid headless and framing TestForwared with a Config.getInstance null check

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,12 @@ language: android
 # to avoid Unsupported major.minor version 52.0 we need to specify the JDK to be used
 # https://stackoverflow.com/a/40208648/1497139
 jdk: oraclejdk8
+# support for headless Swing tests and other gui stuff
+# https://docs.travis-ci.com/user/gui-and-headless-browsers/ 
+before_scrip0t:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 # switch off gpg handling
 install: mvn install -DskipTests=true -Dgpg.skip=true
 script: mvn test
@@ -25,7 +31,10 @@ android:
 cache:
   directories:
     - $HOME/.gradle/wrapper
-    - $HOME/.gradle/native
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start    - $HOME/.gradle/native
     - $HOME/.gradle/daemon
     - $HOME/.gradle/caches/jars-3
     - $HOME/.gradle/caches/3.5
