--- a/elm327/build.gradle
+++ b/elm327/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     // Optional -- Mockito framework
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.github.purejavacomm:purejavacomm:1.0.2.RELEASE'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     compile 'junit:junit:4.12'
 }
 
