--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
+      lintOptions {
+          abortOnError false
+      }
+
     buildTypes {
         release {
             minifyEnabled false
