--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 	<artifactId>com.bitplan.can4eve</artifactId>
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
-	<name>Can4Eve</name>
+	<name>com.bitplan.can4eve</name>
+	<description>OBDII CAN diagnosis support for electric vehicles</description>
 	<properties>
 		<!-- http://stackoverflow.com/questions/3017695/how-to-configure-encoding-in-maven -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
