--- a/can4eve/build.gradle
+++ b/can4eve/build.gradle
@@ -20,7 +20,7 @@ task fatJar(type: Jar) {
     manifest {
         attributes 'Implementation-Title': 'can4eve',
                 'Implementation-Version': version,
-                'Main-Class': 'Can4eve'
+                'Main-Class': 'com.bitplan.can4eve.Can4eve'
     }
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
