--- a/can4eve/pom.xml
+++ b/can4eve/pom.xml
@@ -35,6 +35,33 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<!-- create fat jar -->
+			<!-- http://stackoverflow.com/a/16222971 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.bitplan.can4eve.Can4eve</mainClass>
+						</manifest>
+					</archive>
+					<archiveBaseDirectory>${project.basedir}</archiveBaseDirectory>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>assemble-all</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
