--- a/can4eve/pom.xml
+++ b/can4eve/pom.xml
@@ -23,6 +23,12 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/eu.hansolo/SteelSeries -->
+		<dependency>
+			<groupId>eu.hansolo</groupId>
+			<artifactId>SteelSeries</artifactId>
+			<version>3.9.30</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
