--- a/elm327/pom.xml
+++ b/elm327/pom.xml
@@ -17,6 +17,12 @@
 			<artifactId>purejavacomm</artifactId>
 			<version>1.0.2.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
