gets rid of ConsoleDisplay and Swing

--- a/obdii/pom.xml
+++ b/obdii/pom.xml
@@ -52,12 +52,12 @@
 			<artifactId>miglayout</artifactId>
 			<version>3.7.4</version>
 		</dependency>
-		<!-- can not use this easily in JavaFX https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+		<!-- can not use this easily in JavaFX https://mvnrepository.com/artifact/org.jfree/jfreechart 
 		<dependency>
 			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.19</version>
-		</dependency>
+		</dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
 		<!-- Circular FifoBuffer -->
 		<dependency>
