tries fixing  Medusa issues

--- a/obdii/pom.xml
+++ b/obdii/pom.xml
@@ -158,12 +158,9 @@
 								<initialHeapSize>256</initialHeapSize>
 								<maxHeapSize>3000</maxHeapSize>
 							</jre>
-							<!--  <splash>
-								<file>${project.basedir}/src/main/build/Sunflower.bmp</file>
-								<waitForWindow>true</waitForWindow>
-								<timeout>60</timeout>
-								<timeoutErr>true</timeoutErr>
-							</splash> -->
+							<!-- <splash> <file>${project.basedir}/src/main/build/Sunflower.bmp</file> 
+								<waitForWindow>true</waitForWindow> <timeout>60</timeout> <timeoutErr>true</timeoutErr> 
+								</splash> -->
 							<versionInfo>
 								<fileVersion>0.0.0.1</fileVersion>
 								<txtFileVersion>${project.version}</txtFileVersion>
@@ -180,6 +177,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- http://kosalads.blogspot.de/2013/04/maven-copy-artifact-in-to-separate.html -->
 		</plugins>
 	</build>
 </project>
