tries dist:precise

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ language: android
 jdk: oraclejdk8
 # support for headless Swing tests and other gui stuff
 # https://docs.travis-ci.com/user/gui-and-headless-browsers/ 
+# workaround 2017-08-06
+dist: precise
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
