--- a/can4eve/pom.xml
+++ b/can4eve/pom.xml
@@ -12,6 +12,11 @@
 	<description>Can4Eve JavaFX application</description>
 	<dependencies>
 		<dependency>
+			<groupId>com.bitplan.gui</groupId>
+			<artifactId>com.bitplan.javafx</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.bitplan.can4eve</groupId>
 			<artifactId>com.bitplan.elm327</artifactId>
 			<version>0.0.1</version>
@@ -29,14 +34,9 @@
 			<artifactId>gson-extras</artifactId>
 			<version>0.2.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/eu.hansolo/SteelSeries 
-		we are using JavaFX Medusa now
-		<dependency>
-			<groupId>eu.hansolo</groupId>
-			<artifactId>SteelSeries</artifactId>
-			<version>3.9.30</version>
-		</dependency>
-		-->
+		<!-- https://mvnrepository.com/artifact/eu.hansolo/SteelSeries we are using 
+			JavaFX Medusa now <dependency> <groupId>eu.hansolo</groupId> <artifactId>SteelSeries</artifactId> 
+			<version>3.9.30</version> </dependency> -->
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
