--- a/obdii/pom.xml
+++ b/obdii/pom.xml
@@ -79,6 +79,7 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.5</version>
 		</dependency>
+		<!--  TestI18n dependency -->
 		<dependency>
 			<groupId>com.bitplan.gui</groupId>
 			<artifactId>com.bitplan.gui</artifactId>
