--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	  <documentation.wiki>http://can4eve.bitplan.com</documentation.wiki>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<gson.version>2.8.5</gson.version>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
 	<dependencies>
 		<!-- JUnit testing -->
@@ -55,6 +56,22 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-base</artifactId>
+			<version>13</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>13</version>
 		</dependency>
 	</dependencies>
 	<modules>
